# SignHub

./: .gitignore  spacetime.local.json
.claude/: settings.local.json
client/: index.html  package-lock.json  package.json  vitest.config.ts
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/components/: CompanySettings.tsx  ConnectionManager.tsx  ConnectionStatus.tsx  CreateCompanyForm.tsx  Dashboard.tsx  ErrorBoundary.tsx  InviteCodeManager.tsx  JoinCompanyForm.tsx  SignUpForm.tsx  TeamManagement.tsx  ThemeToggle.tsx
client/src/hooks/: useFilteredTable.ts  useFormAction.ts  useIdentity.ts  useTheme.ts
client/src/module_bindings/: add_colleague_by_identity_reducer.ts  cancel_request_reducer.ts  capability_table.ts  company_connection_table.ts  company_member_table.ts  company_table.ts  connection_chat_table.ts  create_account_reducer.ts  create_company_reducer.ts  create_project_reducer.ts  create_user_profile_reducer.ts  generate_invite_code_reducer.ts  index.ts  invite_code_table.ts  invite_to_project_reducer.ts  mark_all_notifications_read_reducer.ts  notification_table.ts  person_table.ts  project_chat_table.ts  project_member_table.ts  project_table.ts  respond_to_connection_reducer.ts  send_connection_chat_reducer.ts  send_project_chat_reducer.ts  transfer_ownership_reducer.ts  types.ts  update_capabilities_reducer.ts  update_company_profile_reducer.ts  update_profile_reducer.ts  update_user_role_reducer.ts  user_account_table.ts  user_table.ts  (+1 more)
client/tests/: helpers.ts  integration.test.ts
spacetimedb/: Cargo.toml
spacetimedb/src/: lib.rs
(+1 files in other folders)
